Fixed bug #14794: Missing border-bottom for inactive tabs (Thanks to Steffen Gebert)
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/branches/TYPO3_4-4@8264 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/sysext/t3skin/stylesheets/visual/element_tab.css
+++ b/typo3/sysext/t3skin/stylesheets/visual/element_tab.css
@@ -35,6 +35,15 @@ table.typo3-dyntabmenu td.disabled_over a {
 	cursor: default;
 }
 
+table.typo3-dyntabmenu td a {
+	border-bottom: 1px solid #ffffff;
+}
+
+table.typo3-dyntabmenu td.tab a,
+table.typo3-dyntabmenu td.tab_over a {
+	border-bottom: 1px solid #c0c0c0;
+}
+
 table.typo3-dyntabmenu td a,
 table#typo3-tabmenu td a {
 	color: #666;
